[package]
name = "traefik-dsd"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = "0.1.10"
redis = "0.27.5"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
